# django-mailing-platform

./: .env.example  .gitignore  README.md  dump.rdb  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_message_user.py  0003_alter_mailing_options.py  0004_subscriber_owner.py  0005_mailing_owner.py
mailings/templates/mailings/: base.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  subscriber_confirm_delete.html  subscriber_detail.html  subscriber_form.html  subscribers_list.html  user_mailings_stats.html
mailings/templates/mailings/includes/: inc_menu.html
users/: admin.py  views.py
users/management/commands/: create_super_user.py
users/migrations/: 0001_initial.py
users/templates/users/: email_confirm.html  email_confirmed.html  login.html  logout.html  password_reset.htm.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
