[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["LimDmitriy <160336426+LimDmitriy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
dotenv = "^0.9.9"
black = "^25.9.0"
psycopg = "^3.2.11"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
